--- a/UniFind/package.json
+++ b/UniFind/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "meteor-node-stubs": "^0.2.11",
+    "schema.js": "^0.1.2",
     "simpl-schema": "^0.3.0"
   }
 }
